// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`failures with default settings > comment text 1`] = `
"<!-- moon-ci-booster-1 -->

## :x: Moon CI Failure Summary

**3 tasks failed**

### \`c:make-error\`

**Error:** Task c:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
This is an error message
\`\`\`

</details>

---

### \`b:make-error\`

**Error:** Task b:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
Error: something went wrong in project b
\`\`\`

</details>

<details><summary><strong>stdout</strong></summary>

\`\`\`
Starting build...
Compiling module B...
\`\`\`

</details>

---

### \`a:make-error\`

**Error:** Task a:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
This is an error message
\`\`\`

</details>

---
"
`;

exports[`failures with default settings > console output 1`] = `""`;

exports[`long logs with CI context > comment text includes deep links 1`] = `
"<!-- moon-ci-booster-test-job -->

## :x: Moon CI Failure Summary

**3 tasks failed**

### \`c:make-error\`

**Error:** Task c:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
This is an error message
\`\`\`

</details>

---

### \`b:make-error\`

**Error:** Task b:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
Error: something went wrong in project b
\`\`\`

</details>

**stdout:** [View full log in CI output](https://github.com/test-owner/test-repo/actions/runs/123/job/456#step:4:2)

---

### \`a:make-error\`

**Error:** Task a:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
This is an error message
\`\`\`

</details>

---
"
`;

exports[`long logs with CI context > console output contains collapsible blocks 1`] = `
"::group::Full stdout for b:make-error
Starting build...
Compiling module B...
::endgroup::
::warning::No pull request or issue found, will not add a comment."
`;

exports[`long logs without CI context > comment text excludes long logs 1`] = `
"<!-- moon-ci-booster-1 -->

## :x: Moon CI Failure Summary

**3 tasks failed**

### \`c:make-error\`

**Error:** Task c:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
This is an error message
\`\`\`

</details>

---

### \`b:make-error\`

**Error:** Task b:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
Error: something went wrong in project b
\`\`\`

</details>

---

### \`a:make-error\`

**Error:** Task a:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
This is an error message
\`\`\`

</details>

---
"
`;

exports[`long logs without CI context > console output contains collapsible blocks 1`] = `
"::group::Full stdout for b:make-error
Starting build...
Compiling module B...
::endgroup::"
`;

exports[`matrix jobs with RUNNER_NAME disambiguation > comment text includes deep links for correct matrix job 1`] = `
"<!-- moon-ci-booster-test-job (node-20) -->

## :x: Moon CI Failure Summary

**3 tasks failed**

### \`c:make-error\`

**Error:** Task c:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
This is an error message
\`\`\`

</details>

---

### \`b:make-error\`

**Error:** Task b:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
Error: something went wrong in project b
\`\`\`

</details>

**stdout:** [View full log in CI output](https://github.com/test-owner/test-repo/actions/runs/123/job/702#step:4:2)

---

### \`a:make-error\`

**Error:** Task a:make-error failed to run.

<details><summary><strong>stderr</strong></summary>

\`\`\`
This is an error message
\`\`\`

</details>

---
"
`;

exports[`no failures > console output 1`] = `"No failing tasks found."`;

exports[`no report warns gracefully 1`] = `"::warning::Run report does not exist, has \`moon ci\` or \`moon run\` ran?"`;
